# yyyyy

./: buildozer.spec.bak  main.py  pyproject.toml
.github/workflows/: main.yml
assets/: a  b  c  d  e
