[build-system]
requires = ["setuptools>=68.0", "cython==0.29.36"]
build-backend = "setuptools.build_meta"

[project]
name = "gameskinmod"
version = "2.0.0"
requires-python = ">=3.10,<3.12"  
dependencies = [
  "kivy==2.3.0",
  "plyer==2.1.0",
  "python-dateutil==2.8.2",
  "pillow==10.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",  
  "buildozer==1.5.0"
]